# multi-arch-github-actions

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  poetry_to_requirements.sh  pyproject.toml  requirements.txt  simple_loop.py
.github/actions/install-run-code/: action.yml
.github/workflows/: ci_multi_arch.yml  ci_workflow.yml  codecov.yml  deploy.yml
ci_multi_arch/: index.html
docs/: ci_multi_arch.md  index.md
search/: search_index.json
