[tool.poetry]
name = "multi-arch-github-actions"
version = "0.1.0"
description = "A sample project of adding multi-arch build pipeline to GitHub and utilising the GitHub actions, workflows and job settings."
authors = ["ibrahimroshdy <ibrahimabdelrahman@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
codecov = "^2.1.13"
coverage = "^6.4.2"
testresources = "^2.0.1"
mkdocs = "^1.5.3"
mkdocs-autorefs = "0.5.0"
mkdocs-macros-plugin = "1.0.5"
mkdocs-material = "9.5.1"
mkdocs-material-extensions = "1.3.1"
mkdocstrings = "0.24.0"
mkdocstrings-python = "1.7.5"
pre-commit = "3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
